<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp" tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_1rm"
        android:text="@string/btn_1rm"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        android:layout_width="184dp"
        android:layout_height="255dp"
        android:background="@drawable/buttonshape_red"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <Button
        android:id="@+id/btn_bmi"

        android:text="@string/btn_bmi"
        android:textColor="#FFFFFF"
        android:textSize="32sp"

        android:layout_width="184dp"
        android:layout_height="245dp"
        android:background="@drawable/buttonshape_blue"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/btn_1rm"
        android:layout_above="@+id/btn_mhr" />
    <Button
        android:id="@+id/btn_mhr"

        android:text="@string/btn_mhr"
        android:textColor="#FFFFFF"
        android:textSize="28sp"

        android:layout_width="191dp"
        android:layout_height="245dp"
        android:background="@drawable/buttonshape_green"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/btn_bmr"
        android:layout_gravity="right|center"
        android:layout_below="@+id/btn_1rm" />

    <Button android:id="@+id/btn_bmr"
    android:text="@string/btn_bmr"
    android:textColor="#FFFFFF"
    android:textSize="32sp"
    android:layout_width="191dp"
    android:layout_height="240dp"
    android:background="@drawable/buttonshape_yellow"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/btn_1rm"
        android:layout_below="@+id/btn_1rm" />

</RelativeLayout>
